lldpd (0.7.16)
  * Features:
    + Use symbol versioning for liblldpctl.so.
    + Ability to get local chassis information with "show
      chassis".
    + The library also has the same ability with the
      `lldpctl_get_local_chassis()` function. It is also possible to
      get a chassis atom from a port with `lldpctl_k_port_chassis`
      key. This is now the preferred way to retrieve chassis related
      information.
  * Fix:
    + Fix build on OS X.

lldpd (0.7.15)
  * Features:
    + Optional features can be configured with "auto" to autodetect if
      they are usable. This is the default value for JSON and XML support.
    + Ability to send and decode custom/unknown TLV. Thanks to Alexandru
      Ardelean.
  * Change:
    + Modify checksum function. While this should be strictly
      equivalent, if you notice CDP packets not accepted anymore, this
      change is the first culprit.

lldpd (0.7.14)
  * Features:
    + Shutdown LLPDU are sent on MSAP change and when lldpd exits.
    + When an exact IP is provided as a management pattern, use it
      unconditionally.
    + Ability to set port ID and description to an arbitrary value,
      thanks to Alexandru Ardelean.
  * Fix:
    + Incorrect boundary check when decoding management address and
      protocol identity may lead to lldpd crash when processing
      malformed LLDPDU.
    + Many edge cases where lldpd was leaving hanging processes after
      crashing.

lldpd (0.7.13)
  * Fix:
    + Unbreak customization of Unix socket path from command line.

lldpd (0.7.12)
  * Features:
    + Interface pattern, management pattern, system description,
      system platform and system hostname can be unconfigured to their
      default values.
  * Fix:
    + Don't complain when parsing a commented line.
    + Correctly persist configuration changes for "system interface
      promiscuous", "system interface description" "med fast-start
      enable", "pause" and "resume".