@@ -111,12 +111,12 @@ static struct lldpd_ops eth_ops = {
 	.cleanup = iflinux_eth_close,
 };
 
+#ifdef ENABLE_OLDIES
 static int
 old_iflinux_is_bridge(struct lldpd *cfg,
     struct interfaces_device_list *interfaces,
     struct interfaces_device *iface)
 {
-#ifdef ENABLE_OLDIES
 	int j;
 	int ifptindices[MAX_PORTS] = {};
 	unsigned long args2[4] = {
@@ -154,16 +154,15 @@ old_iflinux_is_bridge(struct lldpd *cfg,
 		}
 	}
 	return 1;
-#else
-	return 0;
-#endif
 }
+#endif
 
 static int
 iflinux_is_bridge(struct lldpd *cfg,
     struct interfaces_device_list *interfaces,
     struct interfaces_device *iface)
 {
+#ifdef ENABLE_OLDIES
 	struct interfaces_device *port;
 	char path[SYSFS_PATH_MAX];
 	int f;
@@ -193,6 +192,9 @@ iflinux_is_bridge(struct lldpd *cfg,
 	}
 
 	return 1;
+#else
+	return 0;
+#endif
 }
 
 static int
@@ -200,6 +202,7 @@ iflinux_is_vlan(struct lldpd *cfg,
     struct interfaces_device_list *interfaces,
     struct interfaces_device *iface)
 {
+#ifdef ENABLE_OLDIES
 	struct vlan_ioctl_args ifv = {};
 	ifv.cmd = GET_VLAN_REALDEV_NAME_CMD;
 	strlcpy(ifv.device1, iface->name, sizeof(ifv.device1));
@@ -228,6 +231,7 @@ iflinux_is_vlan(struct lldpd *cfg,
 		iface->vlanid = ifv.u.VID;
 		return 1;
 	}
+#endif
 	return 0;
 }
 
@@ -236,6 +240,7 @@ iflinux_is_bond(struct lldpd *cfg,
     struct interfaces_device_list *interfaces,
     struct interfaces_device *master)
 {
+#ifdef ENABLE_OLDIES
 	/* Shortcut if we detect the new team driver. Upper and lower links
 	 * should already be set with netlink in this case.  */
 	if (master->driver && !strcmp(master->driver, "team")) {
@@ -268,6 +273,7 @@ iflinux_is_bond(struct lldpd *cfg,
 		}
 		return 1;
 	}
+#endif
 	return 0;
 }
 
